Smalere og 'fixed' sidebarmenu Fjernet ekstra whitespace på forsiden fra en ikke-brukers perspektiv

--- a/PU13/static/css/sidebar.css
+++ b/PU13/static/css/sidebar.css
@@ -15,20 +15,18 @@
 .wrapper {
     display: flex;
     width: 100%;
-    perspective: 1500px;
 }
 
 #sidebar {
-    height: 100%;
-    min-width: 250px;
-    max-width: 250px;
+    height: 575px;
+    min-width: 180px;
     background: #e9ecef;
     color: #999;
     transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
     transform-origin: bottom left;
     position: -webkit-sticky;
     position: sticky;
-    top: 0;
+    top: 58px;
 }
 
 #sidebar.active {
@@ -64,8 +62,7 @@ a[data-toggle="collapse"] {
 
 #content {
     width: 100%;
-    padding: 30px;
-    min-height: 10vh;
+    padding: 0;
     transition: all 0.3s;
     margin-top: -55px;
 }
